Vector Basics ver 0.2

--- a/linear_algebra_basics/Vector_Basics.ipynb
+++ b/linear_algebra_basics/Vector_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d56bda08",
+   "id": "b649e1e3",
    "metadata": {},
    "source": [
     "**Assume the following table**\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1144909e",
+   "id": "1691c1dd",
    "metadata": {},
    "source": [
     "Scale the data down \n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cea3f61e",
+   "id": "e8749d0e",
    "metadata": {},
    "source": [
     "By RMSE approach\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20e74294",
+   "id": "8672d587",
    "metadata": {},
    "source": [
     "Calculating the same we get \n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "7c530d04",
+   "id": "0f81573b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "c2c3d1a0",
+   "id": "e3045a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "99bdea9c",
+   "id": "e22062cd",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "059424e6",
+   "id": "ea41a391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "ecf465eb",
+   "id": "c7c92d52",
    "metadata": {},
    "outputs": [
     {
@@ -137,9 +137,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d98389bd",
+   "metadata": {},
+   "source": [
+    "#### So what does this tell us, the vector similarity is more valid as it considers the relationship between 2 vectors than just individual values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b09017b",
+   "id": "8eaf89a4",
    "metadata": {},
    "outputs": [],
    "source": []
