Start of Neural Networks 02

--- a/neural_network_basics/neuron_ann_basics.ipynb
+++ b/neural_network_basics/neuron_ann_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cd80e41",
+   "id": "1f373551",
    "metadata": {},
    "source": [
     "### The Brain\n",
@@ -25,7 +25,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2428837f",
+   "id": "56c2e87f",
+   "metadata": {},
+   "source": [
+    "### The Neuron\n",
+    "**The Neuron is the fundamental unit**\n",
+    "\n",
+    "**Function**\n",
+    "- Electrical signals pass through the neuron\n",
+    "- Chemical transmitters are between neurons\n",
+    "- The electrical signal is only generated when the neuron senses a feature which it is specialized in\n",
+    "- This function is called as action potential, where the electric voltage is generated only when a treshold is crossed\n",
+    "\n",
+    "<img src=\"neuron.jpg\" width=50% height=50%/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5b0c669",
    "metadata": {},
    "source": [
     "#### Let us understand how the brain decodes a visual signal from the eye\n",
@@ -57,23 +74,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9353e9c2",
+   "id": "f1919083",
    "metadata": {},
    "source": [
     "## Artificial Neural Networks\n",
-    "So far we have seen the math operations, but where and how we define the math operations?\n",
     "\n",
-    "we first need to define a neuron\n",
     "\n",
     "<img src=\"single_neuron_function.svg\" />\n",
     "\n",
-    "**A neuron is a matchematical function that gets activated on the right input producing some output**"
+    "**An artificial neuron is a matchematical function that gets activated on the right input producing some output**\n",
+    "\n",
+    "**On the sucess of the function a potential is generated for an output, just like the brain neuron**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2e1090b",
+   "id": "67d600a3",
    "metadata": {},
    "outputs": [],
    "source": []
