Formatted the math markdowns

--- a/micrograd/calculation_backpropogation.ipynb
+++ b/micrograd/calculation_backpropogation.ipynb
@@ -224,30 +224,30 @@
    "source": [
     "#### So the derivative is defined as \n",
     "$$\n",
-    "L = lim_{h->0}  f(a+h) - f(h)/h\n",
+    "L = lim_{h->0}  f(a+h) - f(h)/h\\\\~\\\\\n",
     "$$\n",
     "\n",
     "If you see the above in terms of \n",
     "h = 0.001, which is a small increment added to x\n",
     "then\n",
     "$$\n",
-    "y_1 = f(x)\\\\\n",
-    "y_2 = f(x+h)\n",
+    "y_1 = f(x)\\\\~\\\\\n",
+    "y_2 = f(x+h)\\\\~\\\\\n",
     "$$\n",
     "Then the slope(rate of increase/decrease) is\n",
     "\n",
     "$$\n",
-    "\\frac {y_2-y_1}{x_2-x_1}\n",
+    "\\frac {y_2-y_1}{x_2-x_1}\\\\~\\\\\n",
     "$$\n",
     "Which would be\n",
     "\n",
     "$$\n",
-    "\\frac {f(x+h) - f(x)}{(x+h) - (x)}\n",
+    "\\frac {f(x+h) - f(x)}{(x+h) - (x)}\\\\~\\\\\n",
     "$$\n",
     "Which would become \n",
     "\n",
     "$$\n",
-    "\\frac {f(x+h) - f(x)}{h}\n",
+    "\\frac {f(x+h) - f(x)}{h}\\\\~\\\\\n",
     "$$"
    ]
   },
@@ -352,10 +352,10 @@
    "source": [
     "#### By Addition rule of differentiation\n",
     "$$\n",
-    "eq = 3x + 10 \\\\\n",
-    "f'(eq) = f'(3x) + f'(10) \\\\\n",
-    "       = 3 + 0 \\\\\n",
-    "       = 3 \\\\\n",
+    "eq = 3x + 10 \\\\~\\\\\n",
+    "f'(eq) = f'(3x) + f'(10) \\\\~\\\\\n",
+    "       = 3 + 0 \\\\~\\\\\n",
+    "       = 3 \\\\~\\\\\n",
     "$$"
    ]
   },
@@ -367,12 +367,12 @@
     "#### But what if we have a slightly more complex equation(Multivariable)\n",
     "#### We apply partial differential equations to the fore\n",
     "$$\n",
-    "eq = 3a + b \\\\\n",
-    "f'(eq) = \\frac{\\partial eq}{\\partial a b} \\\\\n",
-    "       = \\frac{\\partial eq}{\\partial a} + \\frac{\\partial eq}{\\partial b} \\\\\n",
-    "       = \\frac{\\partial (3a + b)}{\\partial a} + \\frac{\\partial (3a + b)}{\\partial b}\\\\\n",
-    "       = 3 + 1\\\\\n",
-    "       = 4\n",
+    "eq = 3a + b \\\\~\\\\\n",
+    "f'(eq) = \\frac{\\partial eq}{\\partial a b} \\\\~\\\\\n",
+    "       = \\frac{\\partial eq}{\\partial a} + \\frac{\\partial eq}{\\partial b} \\\\~\\\\\n",
+    "       = \\frac{\\partial (3a + b)}{\\partial a} + \\frac{\\partial (3a + b)}{\\partial b}\\\\~\\\\\n",
+    "       = 3 + 1\\\\~\\\\\n",
+    "       = 4\\\\~\\\\\n",
     "$$"
    ]
   },
@@ -467,21 +467,21 @@
     "#### By product rule\n",
     "L = f * d\n",
     "$$\n",
-    "(fg)' = f'g + fg'\\\\\n",
-    "f' = \\frac{\\partial L}{\\partial f} = d\\\\\n",
-    "g' = \\frac{\\partial L}{\\partial d} = f\\\\\n",
-    "(fg)' = \\frac{\\partial L}{\\partial f} * d + f * \\frac{\\partial L}{\\partial d}\\\\\n",
-    "(fg)' = d + f\n",
+    "(fg)' = f'g + fg'\\\\~\\\\\n",
+    "f' = \\frac{\\partial L}{\\partial f} = d\\\\~\\\\\n",
+    "g' = \\frac{\\partial L}{\\partial d} = f\\\\~\\\\\n",
+    "(fg)' = \\frac{\\partial L}{\\partial f} * d + f * \\frac{\\partial L}{\\partial d}\\\\~\\\\\n",
+    "(fg)' = d + f\\\\~\\\\\n",
     "$$\n",
     "\n",
     "\n",
     "$$\n",
-    "L = f * d\\\\\n",
-    "\\frac{\\partial L}{\\partial d} = f (how)\\\\\n",
-    "\\frac{(x+h)-(x)}{h}\\\\\n",
-    "\\frac{\\partial L}{\\partial d} = \\frac{(d+h)*f - d*f}{h}\\\\\n",
-    "              = \\frac{fd + fh - fd}{h}\\\\\n",
-    "              = f\n",
+    "L = f * d\\\\~\\\\\n",
+    "\\frac{\\partial L}{\\partial d} = f (how)\\\\~\\\\\n",
+    "\\frac{(x+h)-(x)}{h}\\\\~\\\\\n",
+    "\\frac{\\partial L}{\\partial d} = \\frac{(d+h)*f - d*f}{h}\\\\~\\\\\n",
+    "              = \\frac{fd + fh - fd}{h}\\\\~\\\\\n",
+    "              = f\\\\~\\\\\n",
     "$$"
    ]
   },
